--- a/__JBF_Submission__/bib_references_DOI.bib
+++ b/__JBF_Submission__/bib_references_DOI.bib
@@ -128,7 +128,7 @@
   year={2022}
  }
 
-@article{hansen2018transparency, title={Transparency and Deliberation Within the FOMC: A Computational Linguistics Approach*}, volume={133}, ISSN={1531-4650}, url={http://dx.doi.org/10.1093/qje/qjx045}, DOI={10.1093/qje/qjx045}, number={2}, journal={The Quarterly Journal of Economics}, publisher={Oxford University Press (OUP)}, author={Hansen, Stephen and McMahon, Michael and Prat, Andrea}, year={2018}, month=may, pages={801-“870} }
+@article{hansen2018transparency, title={Transparency and Deliberation Within the FOMC: A Computational Linguistics Approach}, volume={133}, ISSN={1531-4650}, url={http://dx.doi.org/10.1093/qje/qjx045}, DOI={10.1093/qje/qjx045}, number={2}, journal={The Quarterly Journal of Economics}, publisher={Oxford University Press (OUP)}, author={Hansen, Stephen and McMahon, Michael and Prat, Andrea}, year={2018}, month=may, pages={801-“870} }
 
 @article{bybee2021business,
   title = {Business News and Business Cycles},
