--- a/__JBF_Submission__/bib_references_DOI.bib
+++ b/__JBF_Submission__/bib_references_DOI.bib
@@ -252,3 +252,15 @@
 
 @book{ke2019predicting, title={Predicting Returns With Text Data}, url={http://dx.doi.org/10.3386/w26186}, DOI={10.3386/w26186}, institution={National Bureau of Economic Research}, author={Ke, Zheng Tracy and Kelly, Bryan and Xiu, Dacheng}, year={2019}, month=aug }
 
+
+@article{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}, 
+  doi = {10.48550/ARXIV.1706.03762},
+  url = {https://doi.org/10.48550/arxiv.1706.03762},
+% url = {https://arxiv.org/abs/1706.03762},
+}
+
