--- a/__JBF_Submission__/txt_Clustering.tex
+++ b/__JBF_Submission__/txt_Clustering.tex
@@ -1,6 +1,6 @@
 \section{Clustering News Articles}
 
-\hspace{0.5cm}In this section we present our clustering methodology based on news-implied firm-specific shock classifications and we compare it against a benchmark based on clustering the vector embedding representations of the articles. For ease of exposition, we will first present the benchmark model.
+In this section we present our clustering methodology based on news-implied firm-specific shock classifications and we compare it against a benchmark based on clustering the vector embedding representations of the articles. For ease of exposition, we will first present the benchmark model.
 
 %----------------------------------------------------
 \input{txt_Model_KMeans.tex}
