--- a/__JBF_Submission__/txt_General_Setup.tex
+++ b/__JBF_Submission__/txt_General_Setup.tex
@@ -1,7 +1,6 @@
 \section{Mathematical Treatment of News Articles}
 
- \hspace{0.5cm} 
- Our dataset consists of $N=2,613$ Spanish business news articles 
+Our dataset consists of $N=2,613$ Spanish business news articles 
  sourced from DowJones and spanning the period from 2020/06/24 to 2021/09/30. 
  We denote as $\mathcal D$ the set of all articles in our sample.
  % from DowJones for the period 2020-6-24 to 2021-09-30. 
@@ -47,7 +46,7 @@ The training and validation sets collectively comprise 80\% of the total dataset
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection*{Effective treatment day}
-\hspace{0.5cm} We are interested in examining the impact of each news article $i\in\D$ on the stock price of the firms that are affected directly (i.e.: all $j\in\F^i$). Since the publication datetime is not necessarily a trading datetime, we cannot directly gauge such an effect by looking at $\mathcal Y_0^i$. 
+We are interested in examining the impact of each news article $i\in\D$ on the stock price of the firms that are affected directly (i.e.: all $j\in\F^i$). Since the publication datetime is not necessarily a trading datetime, we cannot directly gauge such an effect by looking at $\mathcal Y_0^i$. 
 For this reason, we need to work through some definitions. 
 %
 %$(\tilde{d}_0^i)$ as the date at which news article $i$ events can be incorporated into the stock prices of $\F^i$. 
