--- a/__JBF_Submission__/txt_Trading_Strategy.tex
+++ b/__JBF_Submission__/txt_Trading_Strategy.tex
@@ -27,7 +27,7 @@ d\in \tilde{\mathfrak{d}}
 \}
 ,
 $
-where $\mathbb{I}_{\tilde{\mathfrak d}}$ maps an element $d\in\tilde{\mathfrak d}$ to its position in $\tilde{\mathfrak d}$ and $\mathbb{I}_{\tilde{\mathfrak d}}$ does the inverse operation. 
+where $\mathbb{I}_{\tilde{\mathfrak d}}$ maps an element $d\in\tilde{\mathfrak d}$ to its position in $\tilde{\mathfrak d}$ and $\mathbb{I}^{-1}_{\tilde{\mathfrak d}}$ does the inverse mapping. 
 }
 %
 %
