--- a/Synthetic_Control_in_Asset_Pricing/__main__.tex
+++ b/Synthetic_Control_in_Asset_Pricing/__main__.tex
@@ -59,6 +59,7 @@ This paper develops a novel framework for applying the Synthetic Control Method 
 %----------------------------------------------------
 
 \newpage
+%\tableofcontents % COMMMENT OUT EVENTUALLY
 \setcounter{page}{1}
 
 %%%%%%%%%%%%% INTRODUCTION %%%%%%%%%%%%%%%%%%
@@ -68,7 +69,8 @@ This paper develops a novel framework for applying the Synthetic Control Method 
 %\input{txt_Data.tex}
 
 %%%%%%%%%%%%%%%%%% METHODOLOGY %%%%%%%%%%%%%%%%%%%%%%
-\input{txt_Methodology.tex}
+%\input{txt_Methodology.tex}
+\input{txt_Statistical_Arbitrage.tex}
 
 %%%%%%%%%%%%%%%%%% CONCLUSION %%%%%%%%%%%%%%%%%%%%%%
 %\input{txt_Conclusion.tex}
